Created electronic element widget

--- a/app/src/main/res/layout/activity_bedroom.xml
+++ b/app/src/main/res/layout/activity_bedroom.xml
@@ -29,4 +29,40 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvBedroomName" />
+
+
+    <com.chernysh.smarthome.presentation.widget.ElectronicElementView
+        android:id="@+id/evLight"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/evRozette"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <com.chernysh.smarthome.presentation.widget.ElectronicElementView
+        android:id="@+id/evRozette"
+        android:layout_width="0dp"
+        android:layout_height="120dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/white_rounded_rect_bg"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/evLight" />
+
+    <android.support.constraint.Barrier
+        android:id="@+id/barrierElectronicElements"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="top"
+        app:constraint_referenced_ids="evLight,evRozette"
+        tools:layout_editor_absoluteY="731dp" />
+
+
 </android.support.constraint.ConstraintLayout>
