Implemented arc for controlling temperature.

--- a/app/src/main/res/layout/activity_bedroom.xml
+++ b/app/src/main/res/layout/activity_bedroom.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/windowBackground"
     android:layout_height="match_parent">
 
     <TextView
@@ -30,7 +31,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvBedroomName" />
 
-
     <com.chernysh.smarthome.presentation.widget.ElectronicElementView
         android:id="@+id/evLight"
         android:layout_width="0dp"
@@ -56,13 +56,77 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/evLight" />
 
-    <android.support.constraint.Barrier
-        android:id="@+id/barrierElectronicElements"
+    <com.triggertrap.seekarc.SeekArc
+        android:id="@+id/saTemperature"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:padding="30dp"
+        app:arcColor="@color/textSecondary"
+        app:arcWidth="2dp"
+        app:layout_constraintBottom_toTopOf="@id/evRozette"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cvTemperatureHumidityCard"
+        app:max="400"
+        app:progressColor="@color/colorPrimary"
+        app:rotation="180"
+        app:roundEdges="true"
+        app:startAngle="30"
+        app:sweepAngle="300"
+        app:thumb="@drawable/arc_thumb_bg"
+        app:touchInside="true"
+        tools:progress="220" />
+
+    <TextView
+        android:id="@+id/tvDanfossTemperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:barrierDirection="top"
-        app:constraint_referenced_ids="evLight,evRozette"
-        tools:layout_editor_absoluteY="731dp" />
+        android:fontFamily="sans-serif-condensed-light"
+        android:textColor="@color/colorPrimary"
+        android:textSize="32sp"
+        app:layout_constraintBottom_toTopOf="@id/evRozette"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cvTemperatureHumidityCard"
+        app:layout_constraintVertical_bias="0.39"
+        tools:text="22.0 C" />
 
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/textSecondaryLight"
+        app:layout_constraintEnd_toEndOf="@id/ivHouse"
+        app:layout_constraintStart_toStartOf="@id/ivHeater"
+        app:layout_constraintTop_toBottomOf="@id/tvDanfossTemperature" />
+
+    <ImageView
+        android:id="@+id/ivHeater"
+        android:layout_width="46dp"
+        android:layout_height="46dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@id/saTemperature"
+        app:layout_constraintEnd_toStartOf="@id/ivHouse"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="@id/saTemperature"
+        app:layout_constraintTop_toTopOf="@id/saTemperature"
+        app:layout_constraintVertical_bias="0.615"
+        app:srcCompat="@drawable/ic_heater" />
+
+    <ImageView
+        android:id="@+id/ivHouse"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="@id/saTemperature"
+        app:layout_constraintEnd_toEndOf="@id/saTemperature"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toEndOf="@id/ivHeater"
+        app:layout_constraintTop_toTopOf="@id/saTemperature"
+        app:layout_constraintVertical_bias="0.6"
+        tools:srcCompat="@drawable/ic_house_sad" />
 
 </android.support.constraint.ConstraintLayout>
