--- a/app/src/main/res/layout/layout_element.xml
+++ b/app/src/main/res/layout/layout_element.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/clElementContainer"
-    android:layout_width="0dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:animateLayoutChanges="true"
     android:background="@drawable/white_rounded_rect_bg"
@@ -34,9 +34,8 @@
         android:id="@+id/tvElementName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="32dp"
         android:layout_marginEnd="8dp"
-        android:gravity="center_horizontal"
         android:text="@string/lights_title"
         android:textColor="@color/textPrimary"
         android:textSize="16sp"
