--- a/app/src/main/res/layout/activity_corridor.xml
+++ b/app/src/main/res/layout/activity_corridor.xml
@@ -25,6 +25,7 @@
       android:id="@+id/fabMenu"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginStart="16dp"
       android:layout_marginTop="16dp"
       android:tint="@color/white"
       app:backgroundTint="@color/colorPrimaryDark"
