--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/alex_brush</item>
+        <item>@font/allerta</item>
+        <item>@font/annie_use_your_telescope</item>
         <item>@font/architects_daughter</item>
+        <item>@font/boogaloo</item>
+        <item>@font/calligraffitti</item>
+        <item>@font/cinzel</item>
+        <item>@font/dosis_medium</item>
+        <item>@font/jura</item>
     </array>
 </resources>
