Added data layer classes for login logic.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,10 +62,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
-        android:fontFamily="@font/dosis_medium"
+        android:fontFamily="sans-serif-light"
+        android:gravity="start"
         android:paddingStart="8dp"
-        android:paddingEnd="8dp"
         android:paddingTop="16dp"
+        android:paddingEnd="8dp"
         android:text="@string/login_enter_pin"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="16sp"
@@ -77,8 +78,9 @@
 
     <View
         android:layout_width="0dp"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:layout_marginTop="4dp"
+        android:translationZ="16dp"
         android:background="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="@id/tvPasswordTitle"
         app:layout_constraintStart_toStartOf="@id/tvPasswordTitle"
@@ -100,8 +102,8 @@
         app:pcv_pin_error_color="@color/textRed"
         app:pcv_pin_inner_alpha="1"
         app:pcv_pin_inner_color="@android:color/white"
-        app:pcv_pin_length="6"
-        app:pcv_pin_outer_color="@color/colorPrimary"
+        app:pcv_pin_length="4"
+        app:pcv_pin_outer_color="@color/textSecondaryLight"
         app:pcv_pin_tint_inner="true"
         app:pcv_pin_tint_outer="true"
         app:pcv_pin_type="unlock" />
