DI fixes and started Flat view implementation

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -261,7 +261,7 @@
         android:textColor="@color/colorPrimaryDark"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@id/btn8"
-        app:layout_constraintStart_toStartOf="btn8"
+        app:layout_constraintStart_toStartOf="@id/btn8"
         app:layout_constraintTop_toBottomOf="@id/btn7" />
 
     <ImageView
