--- a/app/src/main/res/layout/layout_temperature_humidity.xml
+++ b/app/src/main/res/layout/layout_temperature_humidity.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cvTemperatureHumidityContainer"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
-    android:animateLayoutChanges="true"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="4dp"
-    app:cardUseCompatPadding="true"
-    app:contentPadding="8dp">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                   xmlns:tools="http://schemas.android.com/tools"
+                                   android:id="@+id/cvTemperatureHumidityContainer"
+                                   android:layout_width="match_parent"
+                                   android:layout_height="wrap_content"
+                                   android:layout_marginStart="16dp"
+                                   android:layout_marginEnd="16dp"
+                                   android:animateLayoutChanges="true"
+                                   app:cardCornerRadius="8dp"
+                                   app:cardElevation="4dp"
+                                   app:cardUseCompatPadding="true"
+                                   app:contentPadding="8dp">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -145,7 +145,7 @@
             app:layout_constraintStart_toEndOf="@id/ivThermometer"
             app:layout_constraintTop_toBottomOf="@id/viewTemperatureContainerDivider" />
 
-        <android.support.constraint.Group
+        <androidx.constraintlayout.widget.Group
             android:id="@+id/groupTemperatureHumidityData"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -154,7 +154,7 @@
             tvCurrentTemperatureValue,
             viewTemperatureContainerDivider" />
 
-        <android.support.constraint.Group
+        <androidx.constraintlayout.widget.Group
             android:id="@+id/groupLoading"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -163,7 +163,7 @@
             viewProgressBarLeftDivider,
             viewProgressBarRightDivider" />
 
-        <android.support.constraint.Group
+        <androidx.constraintlayout.widget.Group
             android:id="@+id/groupError"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -171,5 +171,5 @@
             app:constraint_referenced_ids="tvError,
             viewProgressBarLeftDivider,
             viewProgressBarRightDivider" />
-    </android.support.constraint.ConstraintLayout>
-</android.support.v7.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
