--- a/app/src/main/res/layout/activity_flat.xml
+++ b/app/src/main/res/layout/activity_flat.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
@@ -12,13 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <android.support.design.widget.NavigationView
+    <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -32,71 +32,73 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:text="@string/flat_control_panel"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                app:layout_constraintBottom_toBottomOf="@id/viewNavDrawerBg"
-                app:layout_constraintEnd_toEndOf="@+id/viewNavDrawerBg"
-                app:layout_constraintStart_toStartOf="@+id/viewNavDrawerBg"
-                app:layout_constraintTop_toTopOf="@id/viewNavDrawerBg" />
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:text="@string/flat_control_panel"
+                    android:textColor="@color/white"
+                    android:textSize="32sp"
+                    app:layout_constraintBottom_toBottomOf="@id/viewNavDrawerBg"
+                    app:layout_constraintEnd_toEndOf="@+id/viewNavDrawerBg"
+                    app:layout_constraintStart_toStartOf="@+id/viewNavDrawerBg"
+                    app:layout_constraintTop_toTopOf="@id/viewNavDrawerBg"
+                    android:fontFamily="@font/lobster"/>
 
             <Switch
-                android:id="@+id/switchAlarm"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:gravity="center_vertical"
-                android:padding="16dp"
-                android:text="@string/flat_alarm"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/viewNavDrawerBg" />
+                    android:id="@+id/switchAlarm"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:gravity="center_vertical"
+                    android:padding="16dp"
+                    android:text="@string/flat_alarm"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/viewNavDrawerBg"
+                    android:fontFamily="sans-serif-condensed"/>
 
             <Switch
-                android:id="@+id/switchBoiler"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:padding="16dp"
-                android:text="@string/flat_boiler"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/switchAlarm" />
+                    android:id="@+id/switchBoiler"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:padding="16dp"
+                    android:text="@string/flat_boiler"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/switchAlarm" android:fontFamily="sans-serif-condensed"/>
 
             <Switch
-                android:id="@+id/switchDoor"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:padding="16dp"
-                android:text="@string/flat_door"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/switchBoiler" />
+                    android:id="@+id/switchDoor"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:padding="16dp"
+                    android:text="@string/flat_door"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/switchBoiler" android:fontFamily="sans-serif-condensed"/>
 
             <TextView
-                android:id="@+id/tvNeptun"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:drawableEnd="@drawable/ic_thumbs_up"
-                android:gravity="center_vertical"
-                android:padding="16dp"
-                android:text="@string/flat_netun"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/switchDoor" />
+                    android:id="@+id/tvNeptun"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:drawableEnd="@drawable/ic_thumbs_up"
+                    android:gravity="center_vertical"
+                    android:padding="16dp"
+                    android:text="@string/flat_netun"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/switchDoor" android:fontFamily="sans-serif-condensed"/>
 
             <ProgressBar
                 android:id="@+id/pbNeptunLoading"
@@ -107,7 +109,7 @@
                 app:layout_constraintBottom_toBottomOf="@+id/tvNeptun"
                 app:layout_constraintEnd_toEndOf="@+id/tvNeptun"
                 app:layout_constraintTop_toTopOf="@+id/tvNeptun" />
-        </android.support.constraint.ConstraintLayout>
-    </android.support.design.widget.NavigationView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.navigation.NavigationView>
 
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
