Bedroom ui fixes.

--- a/app/src/main/res/layout/layout_element.xml
+++ b/app/src/main/res/layout/layout_element.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:id="@+id/clElementContainer"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="wrap_content"
-                                                   android:animateLayoutChanges="true"
-                                                   android:background="@drawable/white_rounded_rect_bg"
-                                                   android:elevation="4dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/clElementContainer"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:animateLayoutChanges="true"
+    android:background="@drawable/white_rounded_rect_bg"
+    android:elevation="4dp">
 
     <ImageView
         android:id="@+id/ivElementIcon"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:elevation="4dp"
-        android:padding="8dp"
+        android:paddingStart="8dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="8dp"
+        android:paddingBottom="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -26,15 +29,13 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivElementIcon"
-        app:thumbTint="@color/colorAccentLight"
-        app:trackTint="@color/colorPrimary" />
+        app:layout_constraintTop_toBottomOf="@id/ivElementIcon" />
 
     <TextView
         android:id="@+id/tvElementName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
         android:text="@string/lights_title"
         android:textColor="@color/textPrimary"
