--- a/app/src/main/res/drawable/white_rounded_rect_bg.xml
+++ b/app/src/main/res/drawable/white_rounded_rect_bg.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="@color/textSecondary">
-    <item android:id="@android:id/mask">
+    <item android:id="@+id/mask1">
         <shape android:shape="rectangle">
-            <solid android:color="@color/textSecondary" />
+            <solid android:color="@color/transparent" />
             <corners android:radius="16dp" />
         </shape>
     </item>
 
     <item
-        android:id="@android:id/mask"
+        android:id="@+id/mask2"
         android:width="64dp"
         android:height="64dp"
         android:gravity="center_horizontal">
@@ -19,7 +19,7 @@
     </item>
 
     <item
-        android:id="@android:id/background"
+        android:id="@+id/background"
         android:top="32dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/white" />
