--- a/app/src/main/res/layout/activity_bedroom.xml
+++ b/app/src/main/res/layout/activity_bedroom.xml
@@ -1,159 +1,175 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
-                                                   android:background="@color/windowBackground"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/windowBackground">
 
-  <TextView
-      android:id="@+id/tvBedroomName"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="24dp"
-      android:fontFamily="@font/architects_daughter"
-      android:text="@string/title_bedroom"
-      android:textColor="@color/colorPrimaryDark"
-      android:textSize="24sp"
-      android:textStyle="bold"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      />
+    <TextView
+        android:id="@+id/tvBedroomName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/lobster"
+        android:text="@string/title_bedroom"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-  <com.google.android.material.floatingactionbutton.FloatingActionButton
-      android:id="@+id/fabMenu"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="16dp"
-      android:layout_marginTop="16dp"
-      android:tint="@color/white"
-      app:backgroundTint="@color/colorPrimaryDark"
-      app:fabSize="normal"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:rippleColor="@color/textWhite"
-      app:srcCompat="@drawable/ic_home"
-      />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:tint="@color/white"
+        app:backgroundTint="@color/colorPrimaryDark"
+        app:fabSize="normal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:rippleColor="@color/textWhite"
+        app:srcCompat="@drawable/ic_home" />
 
-  <com.chernysh.smarthome.presentation.widget.TemperatureHumidityCard
-      android:id="@+id/cvTemperatureHumidityCard"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_marginEnd="16dp"
-      android:layout_marginStart="16dp"
-      android:layout_marginTop="32dp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/tvBedroomName"
-      />
+    <com.chernysh.smarthome.presentation.widget.TemperatureHumidityCard
+        android:id="@+id/cvTemperatureHumidityCard"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvBedroomName" />
 
-  <com.chernysh.smarthome.presentation.widget.ElectronicElementView
-      android:id="@+id/evLight"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_marginBottom="16dp"
-      android:layout_marginEnd="8dp"
-      android:layout_marginStart="16dp"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toStartOf="@+id/evRozette"
-      app:layout_constraintHorizontal_bias="0.5"
-      app:layout_constraintStart_toStartOf="parent"
-      app:type="LIGHT"
-      />
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/rect_white_rounded_corners"
+        android:elevation="8dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toStartOf="@id/evRozette"
+        app:layout_constraintEnd_toEndOf="@id/evRozette"
+        app:layout_constraintTop_toTopOf="@id/evRozette"
+        app:layout_constraintBottom_toBottomOf="@id/evRozette"/>
 
-  <com.chernysh.smarthome.presentation.widget.ElectronicElementView
-      android:id="@+id/evRozette"
-      android:layout_width="0dp"
-      android:layout_height="120dp"
-      android:layout_marginBottom="16dp"
-      android:layout_marginEnd="16dp"
-      android:layout_marginStart="8dp"
-      android:background="@drawable/white_rounded_rect_bg"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.5"
-      app:layout_constraintStart_toEndOf="@+id/evLight"
-      app:type="ROZETTE"
-      />
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/rect_white_rounded_corners"
+        android:elevation="8dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toStartOf="@id/evLight"
+        app:layout_constraintEnd_toEndOf="@id/evLight"
+        app:layout_constraintTop_toTopOf="@id/evLight"
+        app:layout_constraintBottom_toBottomOf="@id/evLight"/>
 
-  <com.triggertrap.seekarc.SeekArc
-      android:id="@+id/saTemperature"
-      android:layout_width="0dp"
-      android:layout_height="0dp"
-      android:layout_gravity="center"
-      android:layout_marginEnd="32dp"
-      android:layout_marginStart="32dp"
-      android:padding="30dp"
-      app:arcColor="@color/textSecondary"
-      app:arcWidth="2dp"
-      app:layout_constraintBottom_toTopOf="@id/evRozette"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/cvTemperatureHumidityCard"
-      app:max="400"
-      app:progressColor="@color/colorPrimary"
-      app:rotation="180"
-      app:roundEdges="true"
-      app:startAngle="30"
-      app:sweepAngle="300"
-      app:thumb="@drawable/arc_thumb_bg"
-      app:touchInside="true"
-      tools:progress="220"
-      />
+    <com.chernysh.smarthome.presentation.widget.ElectronicElementView
+        android:id="@+id/evRozette"
+        android:layout_width="0dp"
+        android:layout_height="140dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/white_rounded_rect_bg"
+        android:elevation="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/evLight"
+        app:type="ROZETTE" />
 
-  <TextView
-      android:id="@+id/tvDanfossTemperature"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:fontFamily="sans-serif-condensed-light"
-      android:textColor="@color/colorPrimary"
-      android:textSize="32sp"
-      app:layout_constraintBottom_toTopOf="@id/evRozette"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/cvTemperatureHumidityCard"
-      app:layout_constraintVertical_bias="0.39"
-      tools:text="22.0 C"
-      />
+    <com.chernysh.smarthome.presentation.widget.ElectronicElementView
+        android:id="@+id/evLight"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="8dp"
+        android:elevation="8dp"
+        app:layout_constraintBottom_toBottomOf="@id/evRozette"
+        app:layout_constraintEnd_toStartOf="@+id/evRozette"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/evRozette"
+        app:type="LIGHT" />
 
-  <View
-      android:layout_width="0dp"
-      android:layout_height="1dp"
-      android:layout_marginTop="16dp"
-      android:background="@color/textSecondaryLight"
-      app:layout_constraintEnd_toEndOf="@id/ivHouse"
-      app:layout_constraintStart_toStartOf="@id/ivHeater"
-      app:layout_constraintTop_toBottomOf="@id/tvDanfossTemperature"
-      />
 
-  <ImageView
-      android:id="@+id/ivHeater"
-      android:layout_width="46dp"
-      android:layout_height="46dp"
-      android:layout_marginEnd="8dp"
-      app:layout_constraintBottom_toBottomOf="@id/saTemperature"
-      app:layout_constraintEnd_toStartOf="@id/ivHouse"
-      app:layout_constraintHorizontal_chainStyle="packed"
-      app:layout_constraintStart_toStartOf="@id/saTemperature"
-      app:layout_constraintTop_toTopOf="@id/saTemperature"
-      app:layout_constraintVertical_bias="0.615"
-      app:srcCompat="@drawable/ic_heater"
-      />
 
-  <ImageView
-      android:id="@+id/ivHouse"
-      android:layout_width="64dp"
-      android:layout_height="64dp"
-      android:layout_marginStart="8dp"
-      app:layout_constraintBottom_toBottomOf="@id/saTemperature"
-      app:layout_constraintEnd_toEndOf="@id/saTemperature"
-      app:layout_constraintHorizontal_chainStyle="packed"
-      app:layout_constraintStart_toEndOf="@id/ivHeater"
-      app:layout_constraintTop_toTopOf="@id/saTemperature"
-      app:layout_constraintVertical_bias="0.6"
-      tools:srcCompat="@drawable/ic_house_sad"
-      />
+    <com.triggertrap.seekarc.SeekArc
+        android:id="@+id/saTemperature"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:padding="30dp"
+        app:arcColor="@color/textSecondary"
+        app:arcWidth="4dp"
+        app:layout_constraintBottom_toTopOf="@id/evRozette"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cvTemperatureHumidityCard"
+        app:max="400"
+        app:progressColor="@color/colorPrimary"
+        app:progressWidth="6dp"
+        app:rotation="180"
+        app:roundEdges="true"
+        app:startAngle="30"
+        app:sweepAngle="300"
+        app:thumb="@drawable/ic_thumb_arc"
+        app:touchInside="true"
+        tools:progress="220" />
+
+    <TextView
+        android:id="@+id/tvDanfossTemperature"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-condensed-light"
+        android:textColor="@color/colorPrimary"
+        android:textSize="32sp"
+        app:layout_constraintBottom_toTopOf="@id/evRozette"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cvTemperatureHumidityCard"
+        app:layout_constraintVertical_bias="0.39"
+        tools:text="22.0 C" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/textSecondaryLight"
+        app:layout_constraintEnd_toEndOf="@id/ivHouse"
+        app:layout_constraintStart_toStartOf="@id/ivHeater"
+        app:layout_constraintTop_toBottomOf="@id/tvDanfossTemperature" />
+
+    <ImageView
+        android:id="@+id/ivHeater"
+        android:layout_width="46dp"
+        android:layout_height="46dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@id/saTemperature"
+        app:layout_constraintEnd_toStartOf="@id/ivHouse"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="@id/saTemperature"
+        app:layout_constraintTop_toTopOf="@id/saTemperature"
+        app:layout_constraintVertical_bias="0.615"
+        app:srcCompat="@drawable/ic_heater" />
+
+    <ImageView
+        android:id="@+id/ivHouse"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="@id/saTemperature"
+        app:layout_constraintEnd_toEndOf="@id/saTemperature"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toEndOf="@id/ivHeater"
+        app:layout_constraintTop_toTopOf="@id/saTemperature"
+        app:layout_constraintVertical_bias="0.6"
+        tools:srcCompat="@drawable/ic_house_sad" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
