--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/alegreya_sans_sc</item>
         <item>@font/architects_daughter</item>
         <item>@font/calligraffitti</item>
         <item>@font/dosis_medium</item>
+        <item>@font/roboto_light</item>
     </array>
 </resources>
